# gdl_utilities

./: README.md  setup.cfg
example/: sample_clt.py
src/gdl_utilities/: __init__.py  ac_commands.py  ac_connection.py  gsm_commands.py  parse_params.py  script.py  xml.py
test/: README.md  test_gdl_utilities.py
test/sandbox/: gs_general_door_macro.gsm  gs_general_door_macro.xml  test_obj_Test123.gsm  test_obj_Test123.xml
