[metadata]
name = gdl_utilities
version = 0.0.1

[options]
package_dir=
    =src
packages = find:
install_requires =
    shell @ git+https://github.com/denwong47/shell
    file_io @ git+https://github.com/denwong47/file_io
    numpy >= 1.20.0
    pandas >= 1.2.0
    tqdm
    #importlib; python_version >= "3.7"
python_requires = >=3.9

[options.packages.find]
where=src

[options.extras_require]
ac_connection = archicad